<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity"
	>
	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="16dp"
		android:focusable="true"
		android:focusableInTouchMode="true"
		>
		<TextView
			android:id="@+id/tv_code"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/last_code"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			/>
		<TextView
			android:id="@+id/tv_current"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/current"
			app:layout_constraintTop_toBottomOf="@id/tv_code"
			app:layout_constraintLeft_toLeftOf="parent"
			/>
		<TextView
			android:id="@+id/tv_current_file"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/current_path"
			app:layout_constraintTop_toBottomOf="@id/tv_current"
			app:layout_constraintLeft_toLeftOf="parent"
			/>

		<EditText
			android:id="@+id/et_path"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="/sdcard/ekzam"
			android:hint="@string/hint_path_to_dir"
			android:inputType="textNoSuggestions"
			app:layout_constraintTop_toBottomOf="@id/tv_current_file"
			app:layout_constraintLeft_toLeftOf="parent"
			tools:ignore="HardcodedText,Autofill"
			/>

		<TextView
			android:id="@+id/tv_zero"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/zero_code"
			app:layout_constraintTop_toBottomOf="@id/et_path"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toLeftOf="@+id/tv_one"
			/>
		<TextView
			android:id="@+id/tv_one"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/one_code"
			app:layout_constraintTop_toBottomOf="@id/et_path"
			app:layout_constraintLeft_toRightOf="@id/tv_zero"
			app:layout_constraintRight_toLeftOf="@id/tv_submit"
			/>
		<TextView
			android:id="@+id/tv_submit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/submit_code"
			app:layout_constraintTop_toBottomOf="@id/et_path"
			app:layout_constraintLeft_toRightOf="@id/tv_one"
			app:layout_constraintRight_toRightOf="parent"
			/>

		<ToggleButton
			android:id="@+id/btn_edit_zero"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textOff="@string/edit"
			android:textOn="@string/press"
			app:layout_constraintTop_toBottomOf="@+id/tv_submit"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toLeftOf="@+id/btn_edit_one"
			/>
		<ToggleButton
			android:id="@+id/btn_edit_one"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textOff="@string/edit"
			android:textOn="@string/press"
			app:layout_constraintTop_toBottomOf="@+id/tv_submit"
			app:layout_constraintLeft_toRightOf="@+id/btn_edit_zero"
			app:layout_constraintRight_toLeftOf="@+id/btn_edit_submit"
			/>
		<ToggleButton
			android:id="@+id/btn_edit_submit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textOff="@string/edit"
			android:textOn="@string/press"
			app:layout_constraintTop_toBottomOf="@+id/tv_submit"
			app:layout_constraintLeft_toRightOf="@+id/btn_edit_one"
			app:layout_constraintRight_toRightOf="parent"
			/>

		<TextView
			android:id="@+id/tv_prev"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/prev_code"
			app:layout_constraintTop_toBottomOf="@id/btn_edit_zero"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toLeftOf="@+id/tv_next"
			/>
		<TextView
			android:id="@+id/tv_next"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/prev_code"
			app:layout_constraintTop_toBottomOf="@id/btn_edit_zero"
			app:layout_constraintLeft_toRightOf="@+id/tv_prev"
			app:layout_constraintRight_toRightOf="parent"
			/>

		<ToggleButton
			android:id="@+id/btn_edit_prev"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textOff="@string/edit"
			android:textOn="@string/press"
			app:layout_constraintTop_toBottomOf="@+id/tv_next"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toLeftOf="@+id/btn_edit_next"
			/>
		<ToggleButton
			android:id="@+id/btn_edit_next"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textOff="@string/edit"
			android:textOn="@string/press"
			app:layout_constraintTop_toBottomOf="@+id/tv_next"
			app:layout_constraintLeft_toRightOf="@+id/btn_edit_prev"
			app:layout_constraintRight_toRightOf="parent"
			/>

		<TextView
			android:id="@+id/tv_tip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/slide_to_unlock"
			android:layout_marginBottom="4sp"
			android:visibility="gone"
			app:layout_constraintTop_toBottomOf="@id/btn_edit_next"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toLeftOf="@+id/btn_lock"
			app:layout_constraintBottom_toTopOf="@+id/btn_permission"
			tools:visibility="visible"
			/>
		<SeekBar
			android:id="@+id/sb_unlock"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:max="100"
			app:layout_constraintTop_toBottomOf="@id/btn_edit_next"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toLeftOf="@id/btn_lock"
			app:layout_constraintBottom_toTopOf="@+id/btn_permission"
			/>
		<Button
			android:id="@+id/btn_lock"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/lock"
			app:layout_constraintTop_toBottomOf="@id/btn_edit_next"
			app:layout_constraintLeft_toRightOf="@id/sb_unlock"
			app:layout_constraintRight_toRightOf="parent"
			/>

		<Button
			android:id="@+id/btn_permission"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/grant_permission"
			android:visibility="gone"
			app:layout_constraintTop_toBottomOf="@+id/btn_lock"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			/>
	</android.support.constraint.ConstraintLayout>

	<ImageView
		android:id="@+id/iv_image"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:scaleType="fitStart"
		android:visibility="gone"
		tools:ignore="ContentDescription"
		/>
	<View
		android:id="@+id/v_block"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/black"
		android:visibility="gone"
		/>
</FrameLayout>